# titanic

./: pyproject.toml
data/clean/: clean.parquet  extra_clean.parquet  ready.parquet  ready_2.parquet  ready_3.parquet
data/prediciton/: pre.csv
ml/: e_cabin_adv.pkl  e_embarked.pkl  e_letter_ticket.pkl  e_name_tittle.pkl  ml.pkl
notebooks/: 01_eda.ipynb  02_dev.ipynb  03_ml_model.ipynb  04_ml_predict.ipynb  0_test.ipynb
src/: labeling.py
